# folium-vectorgrid

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  readme.md
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: build-test-release.yaml  ci.yml  main.yml
folium_vector/: __init__.py  vector_grid.py  vectorgrid.py
folium_vectorgrid/: __init__.py  vectorgrid.py
src/folium_vectorgrid/: __init__.py  vectorgrid.py
tests/: test_vectorgrid.py
