[tool.poetry]
name = "folium-vectorgrid"
version = "0.2.0"
description = "VectorGrid plugin for folium"
authors = ["Benjamin Ramser <ahoi@ipwnd.pw>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
folium = "^0.14.0"

[tool.poetry.group.dev.dependencies]
gitlint = "^0.18.0"
pytest = "^7.2.2"
pre-commit = "^3.1.0"
black = "^23.1.0"
poethepoet = "^0.16.4"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
ruff = "^0.0.254"

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test       = "poetry run pytest -vv -s tests/"
test-cov   = "poetry run pytest -vv -s --cov=folium_vectorgrid tests/"
lint       = "ruff ."
