[tool.poetry]
name = "folium-vectorgrid"
version = "0.1.1"
description = "VectorGrid plugin for folium"
authors = ["Benjamin Ramser <ahoi@ipwnd.pw>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.9"
folium = "^0.14.0"

[tool.poetry.group.dev.dependencies]
gitlint = "^0.19.0"
pytest = "^7.2.2"
pre-commit = "^3.1.1"
black = "^23.1.0"
poethepoet = ">=0.18.1,<0.21.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
ruff = ">=0.0.254,<0.0.270"
mypy = "^1.1.1"
python-semantic-release = "^7.33.2"

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "folium_vectorgrid/__init__.py:__version__",
    "pyproject.toml:version",
]
commit_subject = "ci: release v{version}"
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry --upgrade && poetry build"

[tool.poe.tasks]
test       = "poetry run pytest -vv -s tests/"
test-cov   = "poetry run pytest -vv -s --cov=folium_vectorgrid tests/"
lint       = "ruff ."
publish    = "poetry run semantic-release publish"
