[tool.poetry]
name = "folium-vectorgrid"
version = "0.1.3"
description = "VectorGrid plugin for folium"
authors = ["Benjamin Ramser <iwpnd@posteo.de>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.9"
folium = "^0.17.0"

[tool.poetry.group.dev.dependencies]
gitlint = "^0.19.0"
pytest = "^8.2.2"
pre-commit = "^3.7.1"
poethepoet = "^0.27.0"
isort = "^5.12.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
mypy = "^1.10.1"
python-semantic-release = "^9.8.3"

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = [
    "folium_vectorgrid/__init__.py:__version__",
    "pyproject.toml:version",
]
commit_subject = "ci: release v{version}"
branch = "main"
upload_to_release = true
build_command = "pip install poetry --upgrade && poetry build"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "docs"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "chore\\(release\\):",
  "chore\\(deps-dev\\):",
  "build\\(deps-dev\\):",
  "build\\(deps\\):",
  "ci:",
]

[tool.poe.tasks]
test       = "poetry run pytest -vv -s tests/"
test-cov   = "poetry run pytest -vv -s --cov=folium_vectorgrid tests/"
lint       = "ruff check ."
